--- a/src/index.css
+++ b/src/index.css
@@ -68,6 +68,12 @@ button:active {
 	background-color: #33059e;
 	border-color: #33059e;
 }
+button:disabled, button:disabled:hover, button:disabled:active{
+	background-color: firebrick;
+	border-color: firebrick;
+	color: white;
+	cursor: not-allowed;
+}
 .form-actions {
 	text-align: right;
 }
